<resources>
    <string name="app_name">AtmEmpresaConsultoria</string>
    <string name="empresa_detalhes">Sobre a Empresa</string>
    <string name="servico_detalhes">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="texto_processos">Processos</string>
    <string name="texto_acompanhamento">Acompanhamento e Projetos</string>
    <string name="nossos_clientes">Nossos Clientes</string>
    <string name="empresa_sys">Empresa de Desenvolvimento de Sistemas</string>
    <string name="rsm_empresa">Empresa de Auditoria</string>
    <string name="texto_contato">Contato</string>
    <string name="texto_email">E-mail: consultoria@atm.com.br</string>
    <string name="texto_telefone">Telefone: (19) 3333-2222</string>
    <string name="texto_celular">Celular: (19) 99525-3685</string>
</resources>
